.provarCaches/00Df2000001KKNJEA4/objects/IncapTalkBack__Survey_Response__c.object
<CustomObject>
    <description>Used to store the answer to a survey question</description>
    <fields>
        <fullName>IncapTalkBack__Answer__c</fullName>
        <description>Answer to the survey question</description>
        <label>Answer</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapTalkBack__Question_Label__c</fullName>
        <formula>IncapTalkBack__Survey_Question__r.IncapTalkBack__Question__r.IncapTalkBack__Label__c</formula>
        <label>Question Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapTalkBack__Survey_Intake__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>the survey intake that the survey response is connected to.</description>
        <label>Survey Intake</label>
        <referenceTo>IncapTalkBack__Survey_Intake__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncapTalkBack__Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Question that the response is answering</description>
        <label>Survey Question</label>
        <referenceTo>IncapTalkBack__Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>